Testing again running JavaFX script from Java